--- a/Store-Member/src/main/resources/application.yml
+++ b/Store-Member/src/main/resources/application.yml
@@ -8,12 +8,20 @@ spring:
     password: 123456
     url: jdbc:mysql://106.12.182.12:3306/Book?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=Asia/Shanghai
     driver-class-name: com.mysql.jdbc.Driver
-
+  redis:
+    host: 106.12.182.12
+    port: 6379
 eureka:
   client:
     service-url:
       defaultZone: http://106.12.182.12:7000/eureka
 mybatis:
   mapperLocations: classpath:mybatis/*.xml
+
+#redis config start
+  # redis配置，以下有默认配置的也可以使用默认配置
+
+
+
 
 TokenSalt : "a1b2c3ddd"
