--- a/Store-Member/src/main/resources/application.yml
+++ b/Store-Member/src/main/resources/application.yml
@@ -11,10 +11,10 @@ spring:
   redis:
     host: 106.12.182.12
     port: 6379
-eureka:
-  client:
-    service-url:
-      defaultZone: http://106.12.182.12:7000/eureka
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 106.12.145.214
 mybatis:
   mapperLocations: classpath:mybatis/*.xml
 
