--- a/Store-Member/src/main/resources/application.yml
+++ b/Store-Member/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     name: Member
   datasource:
     username: root
-    password: 123456
+    password: root
     url: jdbc:mysql://106.12.182.12:3306/Book?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=Asia/Shanghai
     driver-class-name: com.mysql.jdbc.Driver
   redis:
