--- a/Resolver-Operation/pom.xml
+++ b/Resolver-Operation/pom.xml
@@ -10,10 +10,10 @@
   </parent>
 
   <groupId>org.example</groupId>
-  <artifactId>Store-Book</artifactId>
+  <artifactId>Resolver-Operation</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>Store-Book</name>
+  <name>Resolver-Operation</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
@@ -24,14 +24,57 @@
   </properties>
 
   <dependencies>
+    <!--nacos 注册中心-->
+    <dependency>
+      <groupId>com.alibaba.cloud</groupId>
+      <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+      <version>2.2.1.RELEASE</version>
+      <exclusions>
+        <exclusion>
+          <artifactId>httpclient</artifactId>
+          <groupId>org.apache.httpcomponents</groupId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <!-- nacos注册中心-->
+    <!--dubbo-spring-boot依赖-->
+    <dependency>
+      <groupId>org.apache.dubbo</groupId>
+      <artifactId>dubbo-spring-boot-starter</artifactId>
+      <version>2.7.7</version>
+      <exclusions>
+        <exclusion>
+          <groupId>log4j</groupId>
+          <artifactId>log4j</artifactId>
+        </exclusion>
+        <exclusion>
+          <artifactId>spring-context</artifactId>
+          <groupId>org.springframework</groupId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <!-- dubbo-nacos注册中心 -->
+    <dependency>
+      <groupId>org.apache.dubbo</groupId>
+      <artifactId>dubbo-registry-nacos</artifactId>
+      <version>2.7.7</version>
+      <exclusions>
+        <exclusion>
+          <artifactId>nacos-client</artifactId>
+          <groupId>com.alibaba.nacos</groupId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <!--nacos config-->
+    <dependency>
+      <groupId>com.alibaba.boot</groupId>
+      <artifactId>nacos-config-spring-boot-starter</artifactId>
+      <version>0.2.7</version>
+    </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
       <version>2.2.6.RELEASE</version>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
