--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,10 @@
   <modelVersion>4.0.0</modelVersion>
   <packaging>pom</packaging>
   <modules>
-    <module>Store-Member</module>
-    <module>Store-Book</module>
-    <module>Store-Managers</module>
+    <module>Resolver-Service</module>
+    <module>Resolver-Operation</module>
+    <module>Resolver-Common</module>
+    <module>Resolver-Api</module>
   </modules>
 
   <parent>
