--- a/Resolver-Common/pom.xml
+++ b/Resolver-Common/pom.xml
@@ -11,7 +11,7 @@
   <groupId>org.example</groupId>
   <artifactId>Resolver-Common</artifactId>
   <version>1.0-SNAPSHOT</version>
-
+  <packaging>jar</packaging>
   <name>Resolver-Common</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
