--- a/Resolver-Service/pom.xml
+++ b/Resolver-Service/pom.xml
@@ -21,6 +21,16 @@
         <maven.compiler.target>1.7</maven.compiler.target>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>Resolver-Common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <artifactId>Resolver-Api</artifactId>
+            <groupId>org.example</groupId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
         <!--nacos 注册中心-->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
